--- a/src/posts/TODO(正在施工)/年度总结-副本.md
+++ b/src/posts/TODO(正在施工)/年度总结-副本.md
@@ -43,9 +43,9 @@
 
 **比赛场地真的大啊！！！**（土鳖受到震撼）
 
-![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_IeAGjyI6.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_IeAGjyI6.jpg)
 
-![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_QXdOJp9i.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_QXdOJp9i.jpg)
 
 - 比赛期间多次凌晨起来追日出,第一天以为三点起来就已经很早了,结果天已经亮了我靠 .第二天拉着学长两点起来去金沙滩看日出。虽然早起(凌晨2点算早起吗?)很痛苦,但是景色确实也震撼到了我.
 
@@ -53,7 +53,7 @@
 
 - 矩阵杯是真有钱包下来了青岛最好看的天台举办了一个矩阵杯之夜,现场全是大佬（不敢说话）。现场有乐队,DJ,调酒师真的是纸醉金迷(bushi)
 
-  ![Image_369320917708705](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/Image_369320917708705.jpg)
+  ![Image_369320917708705](https://awaqwqa.github.io/img/年度总结-副本/Image_369320917708705.jpg)
 
   ![Image_1721404345098](./年度总结-副本/Image_1721404345098.jpg)	
 
@@ -63,15 +63,15 @@
 
 8个小时的高铁也坐得我屁股疼
 
-![IMG_20240912_114817](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/IMG_20240912_114817.jpg)
+![IMG_20240912_114817](https://awaqwqa.github.io/img/年度总结-副本/IMG_20240912_114817.jpg)
 
 ![img](./年度总结-副本/img_4Mrh6yKI.jpg)
 
 - 然后第二天,想着来都来了,凌晨两点特种兵旅游. 站5小时看升旗（还下小雨了）,然后马不停蹄去看天坛。
 
-  ![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_UiPSd49W.jpg)
+  ![img](https://awaqwqa.github.io/img/年度总结-副本/img_UiPSd49W.jpg)
 
-  ![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_oYRxhuHI.jpg)
+  ![img](https://awaqwqa.github.io/img/年度总结-副本/img_oYRxhuHI.jpg)
 
 ### 省赛冠军
 
@@ -79,7 +79,7 @@
 
 第二天打得特别紧张,当时分数咬死了(x我太菜了)，上午在第四名.中午上饭的时候同时上题,完全没有心情吃饭一路干到了结束。最后我们在最后一轮检查前几秒搞定了一道题(队友太强了!)成功反超回去拿到了第一名的成绩，真的感觉和做梦一样。
 
-![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_UMSbmDE7.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_UMSbmDE7.jpg)
 
 - 奖杯真的超有分量！！！
 
@@ -99,7 +99,7 @@
 
 刚在**贵阳**下飞机,就开始库库聚餐，库库炫吃的。贵阳真的物价便宜(我就是来ak茶歇区的罢)
 
-![IMG_20241123_194417](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/IMG_20241123_194417.jpg)
+![IMG_20241123_194417](https://awaqwqa.github.io/img/年度总结-副本/IMG_20241123_194417.jpg)
 
 - 第二天打比赛太坐牢了.因为我们队就带了我一个二进制手,只打半天的CTF，还全是二进制(被给予厚望)。然后我毫不意外地拉跨辣遗憾离场
 
@@ -113,7 +113,7 @@
 
 也是收到了人生第一份正式的offer！！！！！！当时真的特别开心。成为了一位北京马楼。
 
-![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_W6oYBxzD.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_W6oYBxzD.jpg)
 
 ## 总结&展望
 
@@ -121,11 +121,11 @@
 
 **2025年，我想要继续学习我喜欢的东西,去看喜欢的风景,去做喜欢的事情。想要更进一步学习好技术**。
 
-![1735445669950](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/1735445669950.png)
+![1735445669950](https://awaqwqa.github.io/img/年度总结-副本/1735445669950.png)
 
 感我虽然现在还离"好"这个词还差很远,但是确实想要学得更好,只是想要技术再好一点。希望2025年能够离心中的目标更接近一步。谢谢2024年大家的陪伴！！！
 
-![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img_pdW2vI9b.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_pdW2vI9b.jpg)
 
 今年看了一部电影,感觉里面有一个场景很打动我，甚至说这个电影其他的名场面我都不是那么喜欢,但是唯独这个场景感觉到了特别。
 
