--- a/src/posts/TODO(正在施工)/年度总结-副本.md
+++ b/src/posts/TODO(正在施工)/年度总结-副本.md
@@ -27,9 +27,9 @@
 
 好在最后结局还算不错,拿到了**极客大挑战**校内第一名的成绩,也成功进入了实验室。
 
-![img](https://awaqwqa.github.io/img/年度总结-副本/年度总结-副本/img.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img.jpg)
 
-![img](./年度总结-副本/img_EUXPOYKg.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_EUXPOYKg.jpg)
 
 ### 核心面试&第一次线下比赛
 
@@ -49,13 +49,13 @@
 
 - 比赛期间多次凌晨起来追日出,第一天以为三点起来就已经很早了,结果天已经亮了我靠 .第二天拉着学长两点起来去金沙滩看日出。虽然早起(凌晨2点算早起吗?)很痛苦,但是景色确实也震撼到了我.
 
-  ![Image_379014069802975](./年度总结-副本/Image_379014069802975.jpg)
+  ![Image_379014069802975](https://awaqwqa.github.io/img/年度总结-副本/Image_379014069802975.jpg)
 
 - 矩阵杯是真有钱包下来了青岛最好看的天台举办了一个矩阵杯之夜,现场全是大佬（不敢说话）。现场有乐队,DJ,调酒师真的是纸醉金迷(bushi)
 
   ![Image_369320917708705](https://awaqwqa.github.io/img/年度总结-副本/Image_369320917708705.jpg)
 
-  ![Image_1721404345098](./年度总结-副本/Image_1721404345098.jpg)	
+  ![Image_1721404345098](https://awaqwqa.github.io/img/年度总结-副本/Image_1721404345098.jpg)	
 
 ### 北京国赛
 
