--- a/src/posts/TODO(正在施工)/年度总结-副本.md
+++ b/src/posts/TODO(正在施工)/年度总结-副本.md
@@ -65,7 +65,7 @@
 
 ![IMG_20240912_114817](https://awaqwqa.github.io/img/年度总结-副本/IMG_20240912_114817.jpg)
 
-![img](./年度总结-副本/img_4Mrh6yKI.jpg)
+![img](https://awaqwqa.github.io/img/年度总结-副本/img_4Mrh6yKI.jpg)
 
 - 然后第二天,想着来都来了,凌晨两点特种兵旅游. 站5小时看升旗（还下小雨了）,然后马不停蹄去看天坛。
 
